Fixed scrollbar issue fr

--- a/src/Components/overlay.css
+++ b/src/Components/overlay.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow: scroll;
+    /* overflow: scroll; */
 }
 
 .overlay{
@@ -15,7 +15,7 @@
 
 .bar{
     width: 10vw;
-    height: 105vh;
+    height: 110vh;
     background: #0c0c0c;
     font-family: 'Roboto Condensed';
     font-size: 200%;
